--- a/index.html
+++ b/index.html
@@ -207,6 +207,28 @@
       </div>
     </div>
   </section>
+  <section class="partners">
+    <div class="container">
+      <h2 class="partners__h2 text__h2">наши партнеры</h2>
+      <div class="partners__grid">
+        <div class="partner__item">
+          <img class="partner__item-img" src="img/partner-img.png" alt="img" >
+        </div>
+        <div class="partner__item">
+          <img class="partner__item-img" src="img/partner-img.png" alt="img" >
+        </div>
+        <div class="partner__item">
+          <img class="partner__item-img" src="img/partner-img.png" alt="img" >
+        </div>
+        <div class="partner__item">
+          <img class="partner__item-img" src="img/partner-img.png" alt="img" >
+        </div>
+        <div class="partner__item">
+          <img class="partner__item-img" src="img/partner-img.png" alt="img" >
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="button__try">
         <button class="button" type="button"><span class="one"></span> <span class="z-index">button</span></button>
   </section>
