--- a/index.html
+++ b/index.html
@@ -229,6 +229,14 @@
       </div>
     </div>
   </section>
+  <section class="reviwes">
+    <div class="container">
+      <h2 class="text__h2 reviwes__h2">Отзывы о работе с нами</h2>
+      <div class="reviwes__grid">
+
+      </div>
+    </div>
+  </section>
   <section class="button__try">
         <button class="button" type="button"><span class="one"></span> <span class="z-index">button</span></button>
   </section>
