first from Bash

--- a/index.html
+++ b/index.html
@@ -233,7 +233,48 @@
     <div class="container">
       <h2 class="text__h2 reviwes__h2">Отзывы о работе с нами</h2>
       <div class="reviwes__grid">
-
+        <div class="reviwes__item">
+          <div class="item__wrap">
+            <p class="square">“</p>
+            <p class="text__p reviwes__p">Lorem Ipsum - это текст-"рыба", 
+              часто используемый в печати и вэб-дизайне. 
+              Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+              В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.
+            </p>
+          </div>
+          <h4 class="text__h4 reviwes__h4">
+            <span class="black">Иванов Иван,</span>
+            <span class="accent">ООО “Газпром-Арена”</span>
+          </h4>
+        </div>
+        <div class="reviwes__item">
+          <div class="item__wrap">
+            <p class="square">“</p>
+            <p class="text__p reviwes__p">Lorem Ipsum - это текст-"рыба", 
+              часто используемый в печати и вэб-дизайне. 
+              Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+              В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.
+            </p>
+          </div>
+          <h4 class="text__h4 reviwes__h4">
+            <span class="black">Иванов Иван,</span>
+            <span class="accent">ООО “Газпром-Арена”</span>
+          </h4>
+        </div>
+        <div class="reviwes__item">
+          <div class="item__wrap">
+            <p class="square">“</p>
+            <p class="text__p reviwes__p">Lorem Ipsum - это текст-"рыба", 
+              часто используемый в печати и вэб-дизайне. 
+              Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
+              В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.
+            </p>
+          </div>
+          <h4 class="text__h4 reviwes__h4">
+            <span class="black">Иванов Иван,</span>
+            <span class="accent">ООО “Газпром-Арена”</span>
+          </h4>
+        </div>
       </div>
     </div>
   </section>
