--- a/index.html
+++ b/index.html
@@ -278,6 +278,22 @@
       </div>
     </div>
   </section>
+  <section class="request">
+    <div class="container">
+      <div class="request__flex">
+        <div class="request__flex-left">
+          <h4 class="request__h4">ХОТИТЕ С НАМИ РАБОТАТЬ?</h4>
+          <h5 class="request__h5">ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</h5>
+        </div>
+        <div class="request__flex-right">
+          <button class="request__btn">
+            <img src="img/write.svg" alt="" class="request__img">
+            ваш запрос
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="button__try">
         <button class="button" type="button"><span class="one"></span> <span class="z-index">button</span></button>
   </section>
