--- a/index.html
+++ b/index.html
@@ -294,6 +294,33 @@
       </div>
     </div>
   </section>
+  <section class="contacts">
+    <div class="container">
+      <h2 class="text__h2 contacts__h2">Контакти</h2>
+      <div class="contacts__grid">
+        <div class="contacts__item">
+          <img class='contact__img-logo' src="./img/location.svg" alt="loc">
+          <h3 class="contact__name text__h3">АДРЕС:</h3>
+          <h3 class="contact__text text__h3">НЕВСКИЙ ПРОСПЕКТ 140,<br>ОФИС 140-142</h3>
+        </div>
+        <div class="contacts__item">
+          <img class='contact__img-logo' src="./img/phone.svg" alt="loc">
+          <h3 class="contact__name text__h3">ТЕЛЕФОН:</h3>
+          <h3 class="contact__text text__h3">8 (812) 111-22-33 </br> 8 (812) 111-22-33</h3>
+        </div>
+        <div class="contacts__item">
+          <img src="./img/hours.svg" alt="time" class="contact__img-logo">
+          <h3 class="contact__name text__h3">ВРЕМЯ РАБОТЫ:</h3>
+          <h3 class="contact__text text__h3">ПН-СБ </br> 10:00 - 20:00</h3>
+        </div>
+        <div class="contacts__item">
+          <img src="./img/email.svg" alt="email" class="contact__img-logo">
+          <h3 class="contact__name text__h3 ">E-MAIL:</h3>
+          <h3 class="contact__text text__h3 email__link">INFO@VIP.RU</h3>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="button__try">
         <button class="button" type="button"><span class="one"></span> <span class="z-index">button</span></button>
   </section>
