new files and new section

--- a/index.html
+++ b/index.html
@@ -172,38 +172,38 @@
         ОТВЕТЫ НА ВОПРОСЫ
       </h2>
       <div class="question__items">
-        <div class="question__item">
-          <h3 class="text__h3 question__h3 close" >РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+        <details class="question__item">
+          <summary class="text__h3 question__h3" >РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
           <p class="text__p question__p">Lorem Ipsum - это текст-"рыба", 
             часто используемый в печати и вэб-дизайне. 
             Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, 
             используя Lorem Ipsum для распечатки образцов.</p>
-        </div>
-        <div class="question__item">
-          <h3 class="text__h3 question__h3 open" >РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+        </details>
+        <details class="question__item">
+          <summary class="text__h3 question__h3" >РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
           <p class="text__p question__p">Lorem Ipsum - это текст-"рыба", 
             часто используемый в печати и вэб-дизайне. 
             Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, 
             используя Lorem Ipsum для распечатки образцов.</p>
-        </div>
-        <div class="question__item">
-          <h3 class="text__h3 question__h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+        </details>
+        <details class="question__item">
+          <summary class="text__h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
           <p class="text__p question__p">Lorem Ipsum - это текст-"рыба", 
             часто используемый в печати и вэб-дизайне. 
             Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, 
             используя Lorem Ipsum для распечатки образцов.</p>
-        </div>
-        <div class="question__item">
-          <h3 class="text__h3 question__h3 close">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</h3>
+        </details>
+        <details class="question__item">
+          <summary class="text__h3 question__h3">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</summary>
           <p class="text__p question__p">Lorem Ipsum - это текст-"рыба", 
             часто используемый в печати и вэб-дизайне. 
             Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. 
             В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, 
             используя Lorem Ipsum для распечатки образцов.</p>
-        </div>
+        </details>
       </div>
     </div>
   </section>
@@ -306,17 +306,21 @@
         <div class="contacts__item">
           <img class='contact__img-logo' src="./img/phone.svg" alt="loc">
           <h3 class="contact__name text__h3">ТЕЛЕФОН:</h3>
-          <h3 class="contact__text text__h3">8 (812) 111-22-33 </br> 8 (812) 111-22-33</h3>
+          <h3 class="contact__text text__h3">
+            <a href="tel:+380936321736">+38 (093)632-17-36</a> 
+            <br>
+            <a href="tel:+48793617319">+48 793 617 319</a></h3>
         </div>
         <div class="contacts__item">
           <img src="./img/hours.svg" alt="time" class="contact__img-logo">
           <h3 class="contact__name text__h3">ВРЕМЯ РАБОТЫ:</h3>
-          <h3 class="contact__text text__h3">ПН-СБ </br> 10:00 - 20:00</h3>
+          <h3 class="contact__text text__h3">ПН-СБ <br> 10:00 - 20:00</h3>
         </div>
         <div class="contacts__item">
           <img src="./img/email.svg" alt="email" class="contact__img-logo">
           <h3 class="contact__name text__h3 ">E-MAIL:</h3>
-          <h3 class="contact__text text__h3 email__link">INFO@VIP.RU</h3>
+          <h3 class="contact__text text__h3 email__link">
+            <a href="mailto:oleksiimatata@gmail.com">INFO@VIP.RU</a></h3>
         </div>
       </div>
     </div>
